fix: align items properly in TxnPreview

--- a/src/components/common/TxnPreview/TxnPreview.module.scss
+++ b/src/components/common/TxnPreview/TxnPreview.module.scss
@@ -51,7 +51,7 @@ $extended-summary-height: 36px;
             .summaryContainer {
                 width: 100%;
                 display: flex;
-                align-items: flex-start;
+                align-items: center;
                 gap: 20px;
 
                 .expandTxn {
